--- a/live_region_tests.html
+++ b/live_region_tests.html
@@ -24,5 +24,6 @@
     Live region tests
   </h1>
   <script src="live_region_tests.js"></script>
+  <p>Note: additional odd/rare test cases are stored in the <a href="./edge-cases">edge-cases</a> folder.</p>
 </body>
 </html>
