Update edge cases page

--- a/live_region_tests.html
+++ b/live_region_tests.html
@@ -23,7 +23,7 @@
   <h1>
     Live region tests
   </h1>
+  <p>Note: additional odd/rare test cases are stored in the <a href="./edge-cases/index.html">edge-cases</a> folder.</p>
   <script src="live_region_tests.js"></script>
-  <p>Note: additional odd/rare test cases are stored in the <a href="./edge-cases">edge-cases</a> folder.</p>
 </body>
 </html>
