Add new img test. Add instructions for testing with virtual buffer off

--- a/live_region_tests.html
+++ b/live_region_tests.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <h1>
-    Live region tests
+    Live region tests -- important: please test with virtual buffer both on and off in NVDA and JAWS
   </h1>
   <p>Note: additional odd/rare test cases are stored in the <a href="./edge-cases/index.html">edge-cases</a> folder.</p>
   <script src="live_region_tests.js"></script>
