Split live region tests into multiple files

--- a/live_region_tests.html
+++ b/live_region_tests.html
@@ -7,23 +7,26 @@
       font-family: arial, sans-serif;
       font-size: 10pt;
     }
-    .testContainer {
-      border: 1px solid #696969;
-      padding: 4px;
-    }
-    .testContainer button {
-      margin-right: 10px;
-    }
-    .regionContainer {
-      display: inline-block;
-    }
   </style>
 </head>
 <body>
   <h1>
-    Live region tests -- important: please test with virtual buffer both on and off in NVDA and JAWS
+    Live region tests
   </h1>
-  <p>Note: additional odd/rare test cases are stored in the <a href="./edge-cases/index.html">edge-cases</a> folder.</p>
-  <script src="live_region_tests.js"></script>
+  <h2>Smoke tests</h2>
+  <ul>
+    <li><a href="text_content_tests.html">Text Content tests</a></li>
+    <li><a href="silence_tests.html">Silence tests</a></li>
+    <li><a href="timing_tests.html">Timing tests</a></li>
+  </ul>
+  <h2>Other</h2>
+  <ul>
+    <li><a href="rich_content_tests.html">Rich Content tests</a></li>
+    <li><a href="full_live_region_tests.html">
+        Original live region test page (large)
+      </a>
+    </li>
+    <li><a href="edge-cases/index.html">Edge cases</a></li>
+  </ul>
 </body>
 </html>
